deployments/Tier-2/kubernetes-config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-app-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: ml-app
  template:
    metadata:
      labels:
        app: ml-app
    spec:
      containers:
      - image: ${IMAGE_URL}
        name: ml-pod
      imagePullSecrets:
      - name: us-east-1-ecr-registry
