deployments/Tier-2/kubernetes-config/inference-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inference-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: inference-app
  template:
    metadata:
      labels:
        app: inference-app
    spec:
      containers:
      - image: ${IMAGE_URL}
        name: inference-pod
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /vol
          name: model-volume-claim
      imagePullSecrets:
      - name: us-east-1-ecr-registry
      volumes:
        - name: model-volume-claim
          persistentVolumeClaim:
            claimName: model-volume-claim
