deployments/Tier-2/kubernetes-config/retraining-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retrain-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: retrain-app
  template:
    metadata:
      labels:
        app: retrain-app
    spec:
      containers:
      - image: ${IMAGE_URL}
        name: retrain-pod
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /vol
          name: retrain-volume-claim
      imagePullSecrets:
      - name: us-east-1-ecr-registry
      volumes:
        - name: retrain-volume-claim
          persistentVolumeClaim:
            claimName: model-volume-claim
