deployments/Tier-2/kubernetes-config/retraining-service copy.yaml
apiVersion: v1
kind: Service
metadata:
  name: retrain-service
spec:
  selector:
    app: retrain-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
