deployments/Tier-2/kubernetes-config/retraining-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: retrain-service
  labels: 
    app: retrain-service
    job: node-api
spec:
  selector:
    app: retrain-app
  ports:
    - name: web
      protocol: TCP
      port: 7000
      targetPort: 8000
  type: LoadBalancer
